--- a/Coplas-Manrique-LaTeX.tex
+++ b/Coplas-Manrique-LaTeX.tex
@@ -59,12 +59,15 @@
 \setlist{nosep,noitemsep,parsep=0pt}
 %
 %CONSPECTVS SIGLORVM
-\newcommand{\eg}{{\emph{LB3}}}
-\newcommand{\jm}{\emph{82*JM}}
-\newcommand{\rl}{\emph{86*RL}}
-\newcommand{\hh}{\emph{HH1}}
-\newcommand{\mn}{\emph{MN19}}
-\newcommand{\im}{\emph{83*IM}}
+\newcommand{\eg}{{\emph{\textbf{LB3}}}}
+\newcommand{\jm}{\emph{\textbf{82*JM}}}
+\newcommand{\rl}{\emph{\textbf{86*RL}}}
+\newcommand{\hh}{\emph{\textbf{HH1}}}
+\newcommand{\mn}{\emph{\textbf{MN19}}}
+\newcommand{\im}{\emph{\textbf{83*IM}}}
+\newcommand{\gamm}{\emph{\textbf{γ}}}
+\newcommand{\delt}{\emph{\textbf{δ}}}
+\newcommand{\etag}{\emph{\textbf{ε}}}
 %
 %
 \begin{document}
@@ -232,9 +235,9 @@ Constituyen al aparato crítico el orden y rúbricas en los testimonios, el apar
 \item \emph{pr.} = prius.
 \item \emph{sec. m.} = secunda manus.
 \item \emph{transp.} = transposuit.
-\item \emph{δ} = {\jm} + {\rl}.
-\item \emph{ε} = {\hh} + {\mn}.
-\item \emph{γ} = \emph{δ} + \emph{ε}.%
+\item {\delt} = {\jm} + {\rl}.
+\item {\etag} = {\hh} + {\mn}.
+\item {\gamm} = \delt + \etag.%
 \end{itemize} 
 \newpage
 %
@@ -262,7 +265,7 @@ fue mejor.\par
 		[II]
 \end{center}
 \pstart
-\edtext{Y pues}{\lemma{y pues}\Afootnote{Pues si \emph{δ}}} vemos lo presente\\
+\edtext{Y pues}{\lemma{y pues}\Afootnote{Pues si {\delt}}} vemos lo presente\\
 cómo en un pu\emph{n}to \edtext{se}{\Afootnote{\emph{om.} {\im}}} es ido\\
 y acabado,\\
 si judgamos sabiamente,\\
@@ -323,7 +326,7 @@ mas cunple tener bue\emph{n} tino\\
 para andar \edtext{esta jornada}{\Afootnote{este camino {\jm}}}\\
 sin errar.\par
 Partimos q\emph{ua}ndo nasçemos,\\
-andamos \edtext{q\emph{ua}ndo}{\Afootnote{mientra \emph{δ}; qua\emph{n}to {\hh}}} bivimos\\
+andamos \edtext{q\emph{ua}ndo}{\Afootnote{mientra {\delt}; qua\emph{n}to {\hh}}} bivimos\\
 y \edtext{llegamos}{\Afootnote{allegamos {\im}}}\\
 al tienpo que feneçemos;\\
 así que, q\emph{ua}ndo morimos,\\
@@ -382,7 +385,7 @@ las perdemos:\par
 de ellas desfaze la hedad,\\
 de ellas, casos desastrados\\
 q\emph{ue} \edtext{acaesçen}{\Afootnote{contecen {\im}}},\\
-\edtext{y de ellas, por calidad}{\lemma{y dellas por calidad}\Afootnote{dellas por su calidad \emph{δ}, {\hh}, {\im}}},\\
+\edtext{y de ellas, por calidad}{\lemma{y dellas por calidad}\Afootnote{dellas por su calidad {\delt}, {\hh}, {\im}}},\\
 en los más altos estados\\
 desfallesçen.\par
 \pend
@@ -427,14 +430,14 @@ se \edtext{ma\emph{n}tiene\emph{n}}{\Afootnote{sostienen {\im}}}.\par
 	[XI]\footnoteA{[XI] X en {\jm}, {\rl}.}
 \end{center}
 \pstart
-Los estados y \edtext{riqueza}{\Afootnote{riquezas \emph{δ}, {\hh}}}\\
+Los estados y \edtext{riqueza}{\Afootnote{riquezas {\delt}, {\hh}}}\\
 que nos \edtext{dexen}{\Afootnote{dexan {\jm}}} a deshora,\\
 ¿quié\emph{n} \edtext{lo}{\Afootnote{\emph{om.} {\eg}}} dubda?\\
 \edtext{No}{\lemma{no}\Afootnote{nos {\rl}}} les pidamos \edtext{firmeza}{\Afootnote{firmezas {\jm}, {\hh}}},\\
 \edtext{pues que}{\Afootnote{por que {\jm}}} son de una señora\\
 que se muda:\par
 que bienes son de Fortuna\\
-que \edtext{rebuelve}{\lemma{rebuelue}\Afootnote{rebueluen \emph{δ}}} co\emph{n} su rueda\\
+que \edtext{rebuelve}{\lemma{rebuelue}\Afootnote{rebueluen {\delt}}} co\emph{n} su rueda\\
 presurosa,\\
 la qual no puede ser una\\
 ni \edtext{estar}{\Afootnote{ser {\im}}} estable ni q\emph{ue}da\\
@@ -445,13 +448,13 @@ en una cosa.\par
 	[XII]\footnoteA{[XII] XI en {\jm}, {\rl}.}
 \end{center}
 \pstart
-\edtext{Y pues}{\lemma{y pues}\Afootnote{pero \emph{γ}, {\im}}} digo que \edtext{acompañen}{\Afootnote{aco\emph{n}pañe {\eg}}}\\
+\edtext{Y pues}{\lemma{y pues}\Afootnote{pero {\gamm}, {\im}}} digo que \edtext{acompañen}{\Afootnote{aco\emph{n}pañe {\eg}}}\\
 y \edtext{lleguen}{\Afootnote{llegue {\eg}}} fasta la huesa\\
 co\emph{n} su dueño;\\
 \edtext{por eso}{\Afootnote{por esto {\jm}; mas por eso {\hh}}} \edtext{no nos engañen}{\Afootnote{no nos engañe {\eg}; no sengañen {\hh}}}\footnoteE{Se adoptaron las lecciones plurales del texto mayoritario frente a las de número singular --esto es, \comillas{aco\emph{n}pañe}, \comillas{llegue} y \comillas{engañe}-- que porta {\eg}.},\\
 pues se va la vida \edtext{apriesa}{\Afootnote{espesa {\mn}}}\\
 como sueño.\par
-\edtext{Y}{\lemma{y}\Afootnote{q\emph{ue} {\hh}}} los \edtext{plazeres}{\Afootnote{deleytes \emph{γ}, {\im}}} de acá\\
+\edtext{Y}{\lemma{y}\Afootnote{q\emph{ue} {\hh}}} los \edtext{plazeres}{\Afootnote{deleytes {\gamm}, {\im}}} de acá\\
 son, en q\emph{ue} nos deleitamos,\\
 tenporales,\\
 y los torme\emph{n}tos de allá,\\
@@ -503,7 +506,7 @@ Dexemos a los troyanos,\\
 que sus males no los vimos\\
 ni sus glorias;\\
 dexemos a los romanos,\\
-\edtext{aunque leemos y oímos}{\lemma{avn que leemos y oymos}\Afootnote{avn q\emph{ue} oymos y leemos \emph{δ}; aunque oymos y leimos \emph{ε}, {\im}}}\\
+\edtext{aunque leemos y oímos}{\lemma{avn que leemos y oymos}\Afootnote{avn q\emph{ue} oymos y leemos {\delt}; aunque oymos y leimos \emph{ε}, {\im}}}\\
 \edtext{sus estorias}{\Afootnote{sus victorias {\jm}, {\hh}, {\im}}}.\par
 No curemos de saber\\
 lo de aquel \edtext{siglo}{\Afootnote{tie\emph{m}po {\hh}}} pasado\\
@@ -522,7 +525,7 @@ Los infantes de Aragó\emph{n},\\
 ¿qué se fiziero\emph{n}?\\
 ¿Qué fue de ta\emph{n}to galán?\\
 ¿Qué fue de tanta inve\emph{n}çión\\
-como \edtext{traxiero\emph{n}}{\Afootnote{truxieron \emph{δ}, {\mn}}}?\par
+como \edtext{traxiero\emph{n}}{\Afootnote{truxieron {\delt}, {\mn}}}?\par
 Las justas y los torneos,\edtext{}{\linenum{|||||189}\Afootnote[nosep]{\hspace*{-0.4em}/190–192 \space\emph{transp.} {\rl}}}\\
 parame\emph{n}tos, bordaduras\\
 y çimeras\\
@@ -671,7 +674,7 @@ los castillos inpunables,\\
 los muros y baluartes\\
 y barreras,\par
 la cava ho\emph{n}da, \edtext{chapada}{\Afootnote{japada {\jm}}},\\
-\edtext{y}{\Afootnote{o \emph{γ}, {\im}}} qualquier otro reparo\\
+\edtext{y}{\Afootnote{o {\gamm}, {\im}}} qualquier otro reparo\\
 ¿qué aprovecha?\\
 \edtext{Q\emph{ua}ndo}{\lemma{q\emph{ua}ndo}\Afootnote{que si \emph{ε}, {\im}}} tú vienes irada,\\
 todo lo \edtext{pasas}{\Afootnote{lleuas {\hh}}} \edtext{de claro}{\Afootnote{de claro en claro {\jm}}}\\
@@ -738,7 +741,7 @@ que prometía.\par
 \pstart
 Antonio \edtext{Pío}{\lemma{pio}\Afootnote{pia {\jm}}} e\emph{n} cleme\emph{n}çia,\\
 \edtext{Marco Aurelio}{\lemma{marco aurelio}\Afootnote{arebo anthonio {\jm}}} e\emph{n} ig\emph{ua}ldat\\
-\edtext{y}{\Afootnote{del \emph{δ}, {\mn}, {\im}; y bue\emph{n} {\hh}}} senblante;\\
+\edtext{y}{\Afootnote{del {\delt}, {\mn}, {\im}; y bue\emph{n} {\hh}}} senblante;\\
 \edtext{Adrïano}{\lemma{adriano}\Afootnote{adriapo \emph{86*JM}}} en eloq\emph{ue}nçia,\\
 \edtext{Theodosio}{\lemma{theodosio}\Afootnote{theosio {\eg}; verdosio {\rl}}} en umanidat\footnoteE{Cuenta con 9 sílabas por las sílabas gramaticales más la aguda \emph{–dad}. Quilis (2009) sostiene que aquello corresponde a una sinéresis en «Theo», leyéndose así «Theo-do-sioen hu-ma-ni-dad».}\\                                                            
 y buen talante.\par
@@ -757,7 +760,7 @@ de su tierra.\par
 No dexó grandes thesoros\\
 ni \edtext{alcançó}{\lemma{alcanço}\Afootnote{llego {\hh}}} \edtext{gra\emph{n}des}{\Afootnote{muchas {\rl}}} riq\emph{ue}zas\\ 
 ni baxillas,\\
-mas fizo \edtext{guerras a moros}{\Afootnote{guerra a los moros \emph{δ}, {\mn}, {\im}; gran guerra a moros {\hh}}}\footnoteE{Se siguen las lecciones plurales de {\eg}, porque don Rodrigo Manrique probablemente no participó en una guerra, sino en otras más. Es necesario atender a los datos proporcionados por Fernando del Pulgar en su \emph{Claros varones de Castilla} [ca. 1480-1486] que, en un capítulo dedicado al maestre, el XIII, titulado «El Maestre Don Rodrigo Manrrique, Conde de Paredes» --que ya citó \textcite[cap. IX]{MenendezYPelayo1944}--, los recoge con gran detalle. A continuación, el pasaje según la edición crítica de Tate:\par
+mas fizo \edtext{guerras a moros}{\Afootnote{guerra a los moros {\delt}, {\mn}, {\im}; gran guerra a moros {\hh}}}\footnoteE{Se siguen las lecciones plurales de {\eg}, porque don Rodrigo Manrique probablemente no participó en una guerra, sino en otras más. Es necesario atender a los datos proporcionados por Fernando del Pulgar en su \emph{Claros varones de Castilla} [ca. 1480-1486] que, en un capítulo dedicado al maestre, el XIII, titulado «El Maestre Don Rodrigo Manrrique, Conde de Paredes» --que ya citó \textcite[cap. IX]{MenendezYPelayo1944}--, los recoge con gran detalle. A continuación, el pasaje según la edición crítica de Tate:\par
 «\emph{En las batallas ⁊ muchos recuentros que ovo con moros ⁊ con christianos este cavallero fue el que, mostrando grand esfuerço a los suyo, fería primero en los contrarios. E las gentes de su conpañía, visto el efuerço de su capitán, todos le seguían ⁊ cobravan osadía de pelear. Tenía tan grand conoscimiento de las cosas del canpo, ⁊ proveí[a]las en tal manera que donde él fue principal capitán nunca puso su gente en logar do se oviese de retraer, porque bolver las espaldas al enemigo era tan ageno que su ánimo que elegía antes de recebir la muerte peleando que salvar la vida huyendo.}\par 
 »\emph{Este cavallero osó acometer grandes fazañas. Especialmente escaló una noche la cibdad de Huesca, que es del reino de Granada. E como quier que subiendo el escala los suyos fueron sentidos de los moros, ⁊ fueron algunos derribados del adarve ⁊ feridos en la subida} [...] \emph{subieron el muro peleando ⁊ no fallescieron de sus fuerças defendiéndolo, aunque veían los unos derramar su sangre, los otros caer de la cerca. E de esta manera, matando de los moros ⁊ muriendo de los suyos, este capitán, ferido en el braço de una saeta, peleando entró la cibdad e retroxo los moros fasta que los cercó en la fortaleza.} [...] \emph{Este cavallero duró ⁊ fizo durar a los suyos conbatiendo los moros que tenía cercados, e resistiendo a los moros que le tenía cercado por espacio de dos días, fasta que vino el socorro }[...] \emph{Ganada aquella cibdad, dexado en ella por capitán a un su hermano llamado Gómes Manrrique, ganó otras fortalezas en la comarca. Socorrió muchas vezes algunas cibdades ⁊ villa ⁊ capitanes christianos en tienpo de estrema necesidad. ⁊ fizo tanta guerra en aquellas tierras que en el reino de Granada el nonbre de Rodrigo Ma[n]rrique fue mucho tienpo a los moros grand terror.}»}\\
 gana\emph{n}do sus fortalezas \edtext{}{\Afootnote[nosep]{fortalezas [y villas] \emph{eras.} {\eg}}}\\
@@ -783,7 +786,7 @@ Después q\emph{ue} fechos famosos\\
 fizo \edtext{en estas dichas guerras}{\Afootnote{en la dicha guerra {\jm}; en esta misma guerra {\rl}; en esta dicha guerra \emph{ε}, {\im}}}\\
 que fazía,\\
 fizo tratos ta\emph{n} ho\emph{n}rrosos\\
-que le diero\emph{n} \edtext{aún}{\lemma{avn}\Afootnote{muy {\im}}} más \edtext{t\emph{ie}rras}{\Afootnote{tierra \emph{γ}, {\im}}}\\
+que le diero\emph{n} \edtext{aún}{\lemma{avn}\Afootnote{muy {\im}}} más \edtext{t\emph{ie}rras}{\Afootnote{tierra {\gamm}, {\im}}}\\
 \edtext{que}{\Afootnote{quel {\jm}}} tenía.\par
 \pend
 
@@ -827,7 +830,7 @@ su partido.\par
 	[XXXIII]\footnoteA{[XXXIII] XXI en {\jm}.}
 \end{center}
 \pstart
-Después \edtext{que puso}{\Afootnote{de puesta {\eg}, \emph{δ}}} la vida\\
+Después \edtext{que puso}{\Afootnote{de puesta {\eg}, {\delt}}} la vida\\
 tantas vezes por su ley\\
 al tablero,\\
 después de ta\emph{n} bie\emph{n} servida\\
@@ -847,14 +850,14 @@ a su puerta,\par
 \pstart
 diziendo: «bue\emph{n} cavallero,\\
 dexad el mu\emph{n}do engañoso\\                                                               
-\edtext{sin falago}{\Afootnote{y su [\emph{f}-\emph{h}]alago \emph{γ}; con halago {\im}}}\footnoteE{Los demás testimonios transmiten «y su [\emph{f}-\emph{h}]alago», que parece tener más sentido, pero que incurre en una hipermetría, porque \emph{h} corresponde a una consonante aspirada o una \emph{f} inicial latina, ya que entre los testimonios alternan \emph{h} [{\rl}] y \emph{f} [{\hh}, {\mn}], aunque alguno la omite [{\jm}]; de ser así esto, algo apreciable por la inestabilidad gráfica, la sinalefa no sería posible y, por tanto, sería conveniente adoptar la lección de {\eg}, que es un tetrasílabo. La lección \emph{sin falago} apuntaría --probablemente-- a que don Rodrigo Manrique debería dejar el mundo \comillas{sin atender} o \comillas{seguir su} \emph{falago}, un sentido más o menos similar. Quizá la lección \emph{y su }[\emph{f}-\emph{h}]\emph{alago} incurre en una \emph{lectio facilior}.};\\
+\edtext{sin falago}{\Afootnote{y su [\emph{f}-\emph{h}]alago {\gamm}; con halago {\im}}}\footnoteE{Los demás testimonios transmiten «y su [\emph{f}-\emph{h}]alago», que parece tener más sentido, pero que incurre en una hipermetría, porque \emph{h} corresponde a una consonante aspirada o una \emph{f} inicial latina, ya que entre los testimonios alternan \emph{h} [{\rl}] y \emph{f} [{\hh}, {\mn}], aunque alguno la omite [{\jm}]; de ser así esto, algo apreciable por la inestabilidad gráfica, la sinalefa no sería posible y, por tanto, sería conveniente adoptar la lección de {\eg}, que es un tetrasílabo. La lección \emph{sin falago} apuntaría --probablemente-- a que don Rodrigo Manrique debería dejar el mundo \comillas{sin atender} o \comillas{seguir su} \emph{falago}, un sentido más o menos similar. Quizá la lección \emph{y su }[\emph{f}-\emph{h}]\emph{alago} incurre en una \emph{lectio facilior}.};\\
 v\emph{uest}ro coraçó\emph{n} de azero\\
 muestre su esfuerço famoso\\ 
 en este trago.\par
 Y pues de vida y de salud\\
 fezistes ta\emph{n} poca cuenta\\     
 por la fama,\\
-\edtext{fazedla de la virtud}{\Afootnote{esfuercese la virtud \emph{δ}, {\mn}, {\im}; esforçad vuestra virtud {\hh}}}\\
+\edtext{fazedla de la virtud}{\Afootnote{esfuercese la virtud {\delt}, {\mn}, {\im}; esforçad vuestra virtud {\hh}}}\\
 para sofrir \edtext{esta}{\Afootnote{aquesta {\hh}}} afrenta\\
 q\emph{ue} \edtext{vos}{\Afootnote{os {\im}}} llama.\par                        
 \pend
@@ -871,7 +874,7 @@ pues otra vida \edtext{más}{\lemma{mas}\Afootnote{tan {\eg}}} larga\\
 acá dexáis;\par
 \edtext{que aunque esta vida de honor}{\Afootnote{aun que vida esta de honor {\im}}}\\
 \edtext{tanpoco no es}{\Afootnote{no penseis ques {\mn}; tan poco no \emph{om.} {\im}}} eternal\\
-\edtext{ni}{\Afootnote{\emph{om.} {\im}}} \edtext{duradera}{\Afootnote{verdadera \emph{δ}, {\mn}, {\im}}},\\
+\edtext{ni}{\Afootnote{\emph{om.} {\im}}} \edtext{duradera}{\Afootnote{verdadera {\delt}, {\mn}, {\im}}},\\
 mas co\emph{n} todo es muy mejor\\
 que la \edtext{otra}{\Afootnote{corona {\jm}}} \edtext{temporal}{\Afootnote{ynfernal {\eg}; corporal {\mn}}},\\     
 pereçedera.\par
@@ -887,7 +890,7 @@ mu\emph{n}danales,\\
 ni co\emph{n} vida deleitable\\
 en que mora\emph{n} los pecados\\
 infernales;\par
-\edtext{que los}{\Afootnote{mas los \emph{δ}, {\mn}}} buenos religiosos\\
+\edtext{que los}{\Afootnote{mas los {\delt}, {\mn}}} buenos religiosos\\
 \edtext{gánanlo}{\lemma{gananlo}\Afootnote{ganan la {\eg}, {\jm}; ganan los {\rl}}} co\emph{n} oraçiones\\                                           
 y con lloros;\\
 los cavall\emph{er}os famosos\\
@@ -909,8 +912,8 @@ y co\emph{n} esta confiança\\
 y co\emph{n} la fe ta\emph{n} entera\\
 que tenéis,\\
 partid con buena\edtext{}{\Afootnote[nosep]{bua/bna/vna {\eg}}}\footnoteE{b[uen]a {\eg} (?). En el manuscrito hay una mancha de tinta borrada en el folio arriba de «ua»/«na», que no propicia distinguir correctamente si es un signo de contracción  ̅ , leyéndose así «buena»/«buena» --el copista confunde \emph{n} y \emph{u} incluso en otros lugares del manuscrito--, o constituye un error, «bua». \textcite{PérezPriego1990,PérezPriego2017} y \textcite{Severin2000} leen en conjunto «vna»; Beltrán lee «bua», y sostiene que yace «con corrección, o abreviatura poco visible, interlineada» \textcite[123]{Beltrán1991}.} espera\emph{n}ça,\\
-\edtext{que la vida verdadera}{\Afootnote{estotra vida tercera \emph{δ}, {\mn}, {\im}}}\\                                                                           
-\edtext{cobraréis}{\lemma{cobrareys}\Afootnote{ganareys \emph{δ}, {\mn}, {\im}}}.»\par
+\edtext{que la vida verdadera}{\Afootnote{estotra vida tercera {\delt}, {\mn}, {\im}}}\\                                                                           
+\edtext{cobraréis}{\lemma{cobrareys}\Afootnote{ganareys {\delt}, {\mn}, {\im}}}.»\par
 \pend
 
 \begin{center}
@@ -941,7 +944,7 @@ y \edtext{baxo}{\Afootnote{\emph{om.} {\jm}}} no\emph{n}bre;\\
 \edtext{Tú, que a tu divinidat}{\lemma{tu que a tu}\Afootnote{juntaste {\jm}}}\\
 ju\emph{n}taste \edtext{cosa}{\Afootnote{avna cosa {\jm}}} ta\emph{n} vil\\
 como \edtext{el}{\Afootnote{es el {\eg}, {\rl}}} onbre;\par
-Tú, \edtext{que los}{\Afootnote{que tan \emph{δ}, {\mn}, {\im}}} gra\emph{n}des torme\emph{n}tos\\
+Tú, \edtext{que los}{\Afootnote{que tan {\delt}, {\mn}, {\im}}} gra\emph{n}des torme\emph{n}tos\\
 sofriste sin resiste\emph{n}çia\\
 en tu persona,\\
 no por mis meresçimie\emph{n}tos,\\
