--- a/Coplas-Manrique-LaTeX.tex
+++ b/Coplas-Manrique-LaTeX.tex
@@ -136,7 +136,7 @@ Impresión incunable a doble columna; tipografía gótica; Zamora, 1483?; 90 fol
 \section*{\centering \textsc{Criterios de edición}}
 \addcontentsline{toc}{subsection}{\textsc{Criterios de edición}}
 
-Para la fijación del texto se tuvo en cuenta el trabajo filológico de \textcite{Beltrán1991,Beltrán2013} y \textcite{PérezPriego1990,PérezPriego2017} y, conforme a ello, se siguió el subarquetipo \emph{α} del \emph{stemma codicum} construido por el segundo. Descartando el subarquetipo \emph{β}, siendo {\im} su testimonio más representativo\footnoteE{Aunque el subarquetipo \emph{β} contenga otros testimonios útiles para la reconstrucción del arquetipo \emph{X} --esto es, \emph{EM6} y \emph{PN1}--, a efectos prácticos de esta edición liminar se utilizó únicamente {\im} por ser el testimonio más representativo del subarquetipo, según lo estudiaron \textcite{PérezPriego2017} y \textcite{Beltrán1991,Beltrán2013}.}, la filiación de los testimonios se resumiría con el siguiente \emph{stemma} reducido a partir de lo anteriormente indicado\footnoteE{Para el \emph{stemma} completo \emph{cfr.} \textcite[103]{PérezPriego2017}.}:\par
+Para la fijación del texto se tuvo en cuenta el trabajo filológico de \textcite{Beltrán1991,Beltrán2013} y \textcite{PérezPriego1990,PérezPriego2017} y, conforme a ello, se siguió el subarquetipo \emph{α} del \emph{stemma codicum} construido por el segundo. Descartando el subarquetipo \emph{β}, siendo {\im} su testimonio más representativo\footnoteE{Aunque el subarquetipo \emph{β} contenga otros testimonios útiles para la reconstrucción del arquetipo \emph{\textbf{X}} --esto es, \emph{EM6} y \emph{PN1}--, a efectos prácticos de esta edición liminar se utilizó únicamente {\im} por ser el testimonio más representativo del subarquetipo, según lo estudiaron \textcite{PérezPriego2017} y \textcite{Beltrán1991,Beltrán2013}.}, la filiación de los testimonios se resumiría con el siguiente \emph{stemma} reducido a partir de lo anteriormente indicado\footnoteE{Para el \emph{stemma} completo \emph{cfr.} \textcite[103]{PérezPriego2017}.}:\par
 
 	\begin{figure}[ht]
 		\centering
@@ -958,7 +958,7 @@ me perdona.»\par
 \pstart
 Así, co\emph{n} tal ente\emph{n}der,\\
 todos sentidos humanos\\
-\edtext{conservados}{\lemma{conseruados}\Afootnote{oluidados {\im}}}\footnoteE{«oluidados» pertenece a {\im}, testimonio representante del subarquetipo \emph{β}. La elección entre las adiáforas es en extremo compleja porque, siguiendo el \emph{stemma codicum} de \textcite{PérezPriego2017} --y el de Beltrán, en parte--, cada una tiene igual peso en los subarquetipos \emph{α} y \emph{β} por remitir al arquetipo \emph{X}. Cada lección tuvo defensores o «electores»; para la lección \emph{conservados}, \textcite{PérezPriego1990,PérezPriego2017}, \textcite{Conde2009} y \textcite{Gonzalez2019}, y para \emph{olvidados}, su innovador y elector \textcite{Beltrán1991,Beltrán2013,Beltrán2016}. Beltrán escuetamente argumenta en favor de la lección \emph{olvidados} en su edición crítica con el siguiente argumento: «\emph{oluidados} y \emph{conseruados} se reparten en las ramas del \emph{stemma} [...] Prefiero la primera opción, pues \emph{sentido} tiene la acepción "apetito, o parte inferior del hombre" (\emph{Aut.}) reforzado probablemente por el calificativo \emph{humanos}, lo que hace de esta variante un caso evidente de \emph{lectio difficilior}.» \parencite[158]{Beltrán1991}. Tras el comentario de \textcite{Conde2009}, en su edición de 2013, Beltrán le otorga mayor autoridad al \emph{Diccionario de Autoridades} --como diccionario antiguo--, porque refleja «valores arcaicos» y conserva «interpretaciones específicas de las ciencias o el pensamiento antiguo», y porque no es una cuestión puramente léxica, sino de valoración moral --en el vocablo--; y en su extenso estudio del 2016 añade, además, ejemplos textuales de época para justificar la acepción «apetitos». [La lección \emph{conservados} forma parte de la tradición \emph{vulgata} del texto]. \textcite{Conde2009} sostiene, contra Beltrán, que del mismo modo que el editor utiliza la segunda acepción para \emph{sentidos} [apetito], podría utilizar la principal, \emph{potencia}/\emph{facultad} para percibir «las impresiones de los objetos exteriores», y la tercera, \emph{entendimiento}/\emph{razón}, por tanto, no resultaría plausible utilizar la evidencia lexicográfica para adoptar \emph{olvidados} como lección para la \emph{constitutio textus}; y proporciona, además, diferentes testimonios para justificar \emph{conservados} y, de paso, la preeminencia de la 1ª y 3ª acepción en el \emph{Diccionario de Autoridades} para \emph{sentidos}, esto es, \emph{entendimiento}/\emph{razón}. \textcite{PérezPriego2017} sigue a Conde. \textcite{Gonzalez2019} propone que la lección \emph{olvidados} resulta de una trivialización; luego, en su análisis, indica que los \emph{sentidos} no son cinco, sino diez, según la tradición medieval: cinco internos y cinco externos; los externos, los propios de la carne; los internos, siguiendo a Tomás de Aquino [\emph{S. Theol.}, I, q. 78, a. 4] --aquel, a su vez, siguiendo a Avicena y su \emph{De anima}--, son la \emph{sensus communis}, \emph{imaginatio}, \emph{phantasia}, \emph{aestimativa} y \emph{memorativa}. Luego, cita dos textos de autoridades que, con certeza, leyó Manrique: La \comillas{Partida Segunda} de Alfonso X el Sabio [\emph{Siete Partidas}, II, XIII] y la \emph{Coronación del Marqués de Santillana} de Juan de Mena [pp. 90-92 en la edición de Kerkhof]. Siguiendo esas influencias, resulta en una unidad entre \emph{sentidos} y \emph{entendimiento}, y olvidar los \emph{sentidos}, como indica la lección \emph{olvidados}, implicaría en quebrar tal unidad al \comillas{deshacerse} de ambas; y al tratarse de una unidad --siguiendo la evidencia proporcionada acerca de las \emph{ars moriendi} y la tradición--, la lección, como se estudia en ecdótica, no puede ir contra el propio autor.\par
+\edtext{conservados}{\lemma{conseruados}\Afootnote{oluidados {\im}}}\footnoteE{«oluidados» pertenece a {\im}, testimonio representante del subarquetipo \emph{β}. La elección entre las adiáforas es en extremo compleja porque, siguiendo el \emph{stemma codicum} de \textcite{PérezPriego2017} --y el de Beltrán, en parte--, cada una tiene igual peso en los subarquetipos \emph{α} y \emph{β} por remitir al arquetipo \emph{\textbf{X}}. Cada lección tuvo defensores o «electores»; para la lección \emph{conservados}, \textcite{PérezPriego1990,PérezPriego2017}, \textcite{Conde2009} y \textcite{Gonzalez2019}, y para \emph{olvidados}, su innovador y elector \textcite{Beltrán1991,Beltrán2013,Beltrán2016}. Beltrán escuetamente argumenta en favor de la lección \emph{olvidados} en su edición crítica con el siguiente argumento: «\emph{oluidados} y \emph{conseruados} se reparten en las ramas del \emph{stemma} [...] Prefiero la primera opción, pues \emph{sentido} tiene la acepción "apetito, o parte inferior del hombre" (\emph{Aut.}) reforzado probablemente por el calificativo \emph{humanos}, lo que hace de esta variante un caso evidente de \emph{lectio difficilior}.» \parencite[158]{Beltrán1991}. Tras el comentario de \textcite{Conde2009}, en su edición de 2013, Beltrán le otorga mayor autoridad al \emph{Diccionario de Autoridades} --como diccionario antiguo--, porque refleja «valores arcaicos» y conserva «interpretaciones específicas de las ciencias o el pensamiento antiguo», y porque no es una cuestión puramente léxica, sino de valoración moral --en el vocablo--; y en su extenso estudio del 2016 añade, además, ejemplos textuales de época para justificar la acepción «apetitos». [La lección \emph{conservados} forma parte de la tradición \emph{vulgata} del texto]. \textcite{Conde2009} sostiene, contra Beltrán, que del mismo modo que el editor utiliza la segunda acepción para \emph{sentidos} [apetito], podría utilizar la principal, \emph{potencia}/\emph{facultad} para percibir «las impresiones de los objetos exteriores», y la tercera, \emph{entendimiento}/\emph{razón}, por tanto, no resultaría plausible utilizar la evidencia lexicográfica para adoptar \emph{olvidados} como lección para la \emph{constitutio textus}; y proporciona, además, diferentes testimonios para justificar \emph{conservados} y, de paso, la preeminencia de la 1ª y 3ª acepción en el \emph{Diccionario de Autoridades} para \emph{sentidos}, esto es, \emph{entendimiento}/\emph{razón}. \textcite{PérezPriego2017} sigue a Conde. \textcite{Gonzalez2019} propone que la lección \emph{olvidados} resulta de una trivialización; luego, en su análisis, indica que los \emph{sentidos} no son cinco, sino diez, según la tradición medieval: cinco internos y cinco externos; los externos, los propios de la carne; los internos, siguiendo a Tomás de Aquino [\emph{S. Theol.}, I, q. 78, a. 4] --aquel, a su vez, siguiendo a Avicena y su \emph{De anima}--, son la \emph{sensus communis}, \emph{imaginatio}, \emph{phantasia}, \emph{aestimativa} y \emph{memorativa}. Luego, cita dos textos de autoridades que, con certeza, leyó Manrique: La \comillas{Partida Segunda} de Alfonso X el Sabio [\emph{Siete Partidas}, II, XIII] y la \emph{Coronación del Marqués de Santillana} de Juan de Mena [pp. 90-92 en la edición de Kerkhof]. Siguiendo esas influencias, resulta en una unidad entre \emph{sentidos} y \emph{entendimiento}, y olvidar los \emph{sentidos}, como indica la lección \emph{olvidados}, implicaría en quebrar tal unidad al \comillas{deshacerse} de ambas; y al tratarse de una unidad --siguiendo la evidencia proporcionada acerca de las \emph{ars moriendi} y la tradición--, la lección, como se estudia en ecdótica, no puede ir contra el propio autor.\par
 Puede concluirse que Rodrigo Manrique fallece conservando facultades físicas y psicológicas [\emph{sentidos} y  \emph{entendimiento}], y que fallece en una «recta ley», ejerciendo los deberes propios que le corresponden como \emph{bellator}, esto es, «guerreando» \parencite[52-55]{Gonzalez2019}. La evidencia histórica y la reconstrucción del \emph{contextus} se inclinan hacia la lección \emph{conservados}.},\\
 çercado de su muger\\
 \edtext{}{\linenum{|||||480}\Afootnote[nosep]{\emph{sec. m.} {\eg}}}\edtext{y de sus fijos y hermanos}{\Afootnote{de sus hijos y ermanos {\eg}; y de fijos y de ermanos {\jm}, {\im}}}\\
@@ -966,7 +966,7 @@ y criados,\par
 dio el alma a quien \edtext{ge la dio}{\lemma{geladio}\Afootnote{gloria dio {\eg}}},\\
 el qual \edtext{la ponga}{\lemma{laponga}\Afootnote{ladio {\rl}}} en el cielo\\
 y en su gloria;\\
-\edtext{q\emph{ue} aunq\emph{ue}}{\Afootnote{y aunque {\jm}, {\mn}, {\im}}} la vida \edtext{murió}{\lemma{murio}\Afootnote{perdio {\eg}, {\rl}}}\footnoteE{«murió» en {\jm}, {\mn} y {\im}. Continuando el argumento anterior, se opta por la lección \emph{murió} porque, al fallecer Rodrigo Manrique con todos sus «sentidos humanos conservados», él «se conservaría» a través de la memoria de sus allegados, cosa que no acontecería si «perdiese» la vida [carnal], porque «perder» tiene connotaciones negativas según las definiciones «ocasionar algún daño a las cosas, desmejorándolas o desluciéndolas» y «padecer algún daño, ruína o disminución en lo material, inmaterial o espiritual» (\emph{Autoridades}, acepciones 6ª y 7ª). Si la «perdiese», aceptando estas acepciones, podría «dañar» o «desmejorar» los \emph{sentidos} y el \emph{entendímiento}, facultades que «regresan» en «plena forma» a su dios, como ya demostraron \textcite{Conde2009} y \textcite{Gonzalez2019}. De ser así, \emph{perdió} anularía la lección \emph{conservados} y, por tanto, lo correcto sería \emph{murió} que, además, por pertenecer a los subarquetipos \emph{α} --{\jm} y {\mn}-- y \emph{β} --{\im}--, restituye la lección del arquetipo \emph{X}.},\\
+\edtext{q\emph{ue} aunq\emph{ue}}{\Afootnote{y aunque {\jm}, {\mn}, {\im}}} la vida \edtext{murió}{\lemma{murio}\Afootnote{perdio {\eg}, {\rl}}}\footnoteE{«murió» en {\jm}, {\mn} y {\im}. Continuando el argumento anterior, se opta por la lección \emph{murió} porque, al fallecer Rodrigo Manrique con todos sus «sentidos humanos conservados», él «se conservaría» a través de la memoria de sus allegados, cosa que no acontecería si «perdiese» la vida [carnal], porque «perder» tiene connotaciones negativas según las definiciones «ocasionar algún daño a las cosas, desmejorándolas o desluciéndolas» y «padecer algún daño, ruína o disminución en lo material, inmaterial o espiritual» (\emph{Autoridades}, acepciones 6ª y 7ª). Si la «perdiese», aceptando estas acepciones, podría «dañar» o «desmejorar» los \emph{sentidos} y el \emph{entendímiento}, facultades que «regresan» en «plena forma» a su dios, como ya demostraron \textcite{Conde2009} y \textcite{Gonzalez2019}. De ser así, \emph{perdió} anularía la lección \emph{conservados} y, por tanto, lo correcto sería \emph{murió} que, además, por pertenecer a los subarquetipos \emph{α} --{\jm} y {\mn}-- y \emph{β} --{\im}--, restituye la lección del arquetipo \emph{\textbf{X}}.},\\
 \edtext{dexónos}{\lemma{dexonos}\Afootnote{nos dexo {\jm}, {\mn}, {\im}}} harto consuelo\\ 
 su memoria.\par
 \pend
